--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,10 +3,10 @@ name: MLOps Pipeline
 on:
   push:
     branches:
-      - main  # Chạy khi có thay đổi trên nhánh main
+      - main
   pull_request:
     branches:
-      - main  # Chạy khi có pull request vào main
+      - main
 
 jobs:
   pipeline:
@@ -23,12 +23,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python -m pip show prefect  # Kiểm tra Prefect đã được cài đặt
 
       # Bước 3: Chạy file pipeline.yaml
-      - name: Run Pipeline
+      - name: Run Prefect pipeline
         run: |
           prefect deployment build src/pipeline.yaml:main_pipeline --name "MLOps Pipeline"
           prefect deployment apply main_pipeline-deployment.yaml
