--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
       - name: Run Pipeline
         run: |
-          python src/pipeline.yaml
+          dvc repro src/pipeline.yaml
