--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install dvc
           pip install -r requirements.txt
-
+          
+      - name: Ensure models directory exists
+        run: mkdir -p models
       - name: Execute Pipeline Tasks
         run: |
           # Task 1: Check Data
