--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,56 +1,49 @@
-name: Deploy API on Heroku1
+name: Deploy API on Heroku
 
 on:
   push:
     branches:
       - main
     paths:
-      - models/fine_tuned_gpt2.dvc
+      - models/fine_tuned_gpt2.dvc  # Trigger chỉ khi file .dvc thay đổi
 
 jobs:
   deploy-api:
-    name: Deploy API to Heroku
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    # Bước 1: Checkout repository
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
+    # Bước 2: Setup Python environment
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.12"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    # Bước 3: Install DVC and dependencies
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Create credentials.json
-        env:
-          GDRIVE_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS }}
-        run: |
-          mkdir -p /home/runner/work/mlops-project/ggdrive
-          echo "$GDRIVE_CREDENTIALS" > /home/runner/work/mlops-project/ggdrive/credentials.json
+    # Bước 4: Log in to Heroku Container Registry
+    - name: Log in to Heroku Container Registry
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
 
-      - name: Pull latest model from DVC
-        run: |
-          dvc pull models/fine_tuned_gpt2.dvc
-          ls -R models/
+    # Bước 5: Build and Push Docker Image
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+        docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-      - name: Log in to Heroku Container Registry
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: |
-          echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
-          docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
-
-      - name: Release App on Heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: |
-          heroku container:release web --app ${{ secrets.HEROKU_APP_NAME }}
+    # Bước 6: Release App on Heroku
+    - name: Release API on Heroku
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        heroku container:release web --app ${{ secrets.HEROKU_APP_NAME }}
