--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,20 +28,25 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Bước 4: Log in to Heroku Container Registry
+    # Bước 4: Install Heroku CLI
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install.sh | sh
+
+    # Bước 5: Log in to Heroku Container Registry
     - name: Log in to Heroku Container Registry
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
         echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
 
-    # Bước 5: Build and Push Docker Image
+    # Bước 6: Build and Push Docker Image
     - name: Build and Push Docker Image
       run: |
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-    # Bước 6: Release App on Heroku
+    # Bước 7: Release App on Heroku
     - name: Release API on Heroku
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
