--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,8 +31,9 @@ jobs:
       env:
         GDRIVE_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS }}
       run: |
-        mkdir -p /app/credentials
-        echo "$GDRIVE_CREDENTIALS" > /app/credentials/credentials.json
+        mkdir -p /tmp/credentials
+        echo "$GDRIVE_CREDENTIALS" > /tmp/credentials/credentials.json
+      
       
     # Bước 4: Install Heroku CLI
     - name: Install Heroku CLI
