--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,8 +61,13 @@ jobs:
   
     # Bước 6: Build and Push Docker Image
     - name: Build and Push Docker Image
+      # run: |
+      #   docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+      #   docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
       run: |
-        docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+        docker build \
+          --build-arg GDRIVE_CREDENTIALS="${{ secrets.GDRIVE_CREDENTIALS }}" \
+          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
       # Bước 8: Release App on Heroku
