--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
       #   docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
       run: |
         docker build \
-          --build-arg GDRIVE_CREDENTIALS="${{ secrets.GDRIVE_CREDENTIALS }}" \
+          --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
           -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
