--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,7 +70,7 @@ jobs:
       #     --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
       #     .
       #   docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
-      run: docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" . && docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+      run: docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web . --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" && docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
       # Bước 8: Release App on Heroku
     - name: Release API on Heroku
