--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,10 +61,10 @@ jobs:
   
     - name: Build and Push Docker Image
       run: |
-        echo "${{ secrets.GDRIVE_CREDENTIALS_JSON }}" > credentials.json
-        docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" .
+        docker build \
+          --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
+          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
-    
 
       # Bước 8: Release App on Heroku
     - name: Release API on Heroku
