--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,9 +61,7 @@ jobs:
   
     - name: Build and Push Docker Image
       run: |
-        docker build \
-          --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
-          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+        docker buildx build --push -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
       # Bước 8: Release App on Heroku
