--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -62,8 +62,9 @@ jobs:
     - name: Build and Push Docker Image
       run: |
         docker build \
+          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web \
           --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
-          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+          .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
       # Bước 8: Release App on Heroku
