--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,7 +40,11 @@ jobs:
     #   run: |
     #     mkdir -p /tmp/credentials
     #     echo "$GDRIVE_CREDENTIALS" > /tmp/credentials/credentials.json
-      
+    - name: Debug Secrets
+      run: |
+        echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}"
+        echo "GDRIVE_CREDENTIALS_JSON: ${{ secrets.GDRIVE_CREDENTIALS_JSON }}..."
+  
       
     # Bước 4: Install Heroku CLI
     - name: Install Heroku CLI
