--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.12"
+    - name: Debug Secrets
+      run: |
+        echo "HEROKU_APP_NAME_1: ${{ secrets.HEROKU_APP_NAME_1 }}"
+    
 
     # Bước 3: Install dependencies
     - name: Install dependencies
@@ -40,9 +44,9 @@ jobs:
     #   run: |
     #     mkdir -p /tmp/credentials
     #     echo "$GDRIVE_CREDENTIALS" > /tmp/credentials/credentials.json
-    - name: Debug Secrets
-      run: |
-        echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}"
+    # - name: Debug Secrets
+    #   run: |
+    #     echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME_1 }}"
   
       
     # Bước 4: Install Heroku CLI
@@ -58,22 +62,22 @@ jobs:
         echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
 
     - name: Set Heroku Stack  
-      run: heroku stack:set container -a ${{ secrets.HEROKU_APP_NAME }}
+      run: heroku stack:set container -a ${{ secrets.HEROKU_APP_NAME_1 }}
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   
     - name: Build and Push Docker Image
       run: |
         docker build \
-          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web \
+          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME_1 }}/web \
           --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
           .
-        docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+        docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME_1 }}/web
 
       # Bước 8: Release App on Heroku
     - name: Release API on Heroku
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
-        heroku stack:set container -a ${{ secrets.HEROKU_APP_NAME }}
-        heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
+        heroku stack:set container -a ${{ secrets.HEROKU_APP_NAME_1 }}
+        heroku container:release web -a ${{ secrets.HEROKU_APP_NAME_1 }}
