--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,8 +43,8 @@ jobs:
     #     echo "$GDRIVE_CREDENTIALS" > /tmp/credentials/credentials.json
     - name: Debug Secrets
       run: |
-        echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_API_KEY }}"
-        echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}"
+        echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_API_KEY }}..."
+        echo "HEROKU_APP_API: ${{ secrets.HEROKU_APP_NAME }}..."
         echo "GDRIVE_CREDENTIALS_JSON: ${{ secrets.GDRIVE_CREDENTIALS_JSON }}..."
   
       
