--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Build and Push Docker Image
       run: |
         docker build \
-          -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web \
+          -t registry.heroku.com/"${{ secrets.HEROKU_APP_NAME }}"k/web \
           --build-arg GDRIVE_CREDENTIALS_JSON="${{ secrets.GDRIVE_CREDENTIALS_JSON }}" \
           .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
