--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,12 +66,10 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   
     - name: Build and Push Docker Image
-      env:
-        GDRIVE_CREDENTIALS_JSON: ${{ secrets.GDRIVE_CREDENTIALS_JSON }}
       run: |
         docker build \
           -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web \
-          --build-arg GDRIVE_CREDENTIALS_JSON=$GDRIVE_CREDENTIALS_JSON \
+          --build-arg GDRIVE_CREDENTIALS_JSON=${{ secrets.GDRIVE_CREDENTIALS_JSON }} \
           .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
       # run: |
