--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     # paths:
-    #   - models/fine_tuned_gpt2.dvc  # Trigger chỉ khi file .dvc thay đổi
+    #   - models/fine_tuned_gpt2.dvc 
 
 jobs:
   deploy-api:
@@ -23,37 +23,21 @@ jobs:
       with:
         python-version: "3.12"
 
-    # Bước 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+            # 4. Chạy Unit Tests
+    - name: Run Unit Tests
+      run: |
+        PYTHONPATH=src pytest test/
+      continue-on-error: false 
 
-
-    # - name: Create credentials.json
-    #   run: |
-    #     mkdir -p ggdrive
-    #     echo "${{ secrets.GDRIVE_CREDENTIALS_JSON }}" > ggdrive/credentials.json
-
-    # - name: Create credentials.json
-    #   env:
-    #     GDRIVE_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS }}
-    #   run: |
-    #     mkdir -p /tmp/credentials
-    #     echo "$GDRIVE_CREDENTIALS" > /tmp/credentials/credentials.json
-    # - name: Debug Secrets
-    #   run: |
-    #     echo "HEROKU_APP_NAME: ${{ secrets.HEROKU_API_KEY }}..."
-    #     echo "HEROKU_APP_API: ${{ secrets.HEROKU_APP_NAME }}..."
-    #     echo "GDRIVE_CREDENTIALS_JSON: ${{ secrets.GDRIVE_CREDENTIALS_JSON }}..."
-  
       
-    # Bước 4: Install Heroku CLI
     - name: Install Heroku CLI
       run: |
         curl https://cli-assets.heroku.com/install.sh | sh
 
-    # Bước 5: Log in to Heroku Container Registry
     - name: Log in to Heroku Container Registry
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
@@ -72,13 +56,11 @@ jobs:
         echo "${{ secrets.GDRIVE_CREDENTIALS_JSON }}" > ggdrive/credentials.json
   
   
-    # Bước 6: Build and Push Docker Image
     - name: Build and Push Docker Image
       run: |
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-      # Bước 8: Release App on Heroku
     - name: Release API on Heroku
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
